Add ability to get router stats from front-end
